[package]
name = "rebalance"
version = "0.1.2"
authors = ["Behrang Shafei"]
edition = "2021"
rust-version = "1.72"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rebalance"
description = "Portfolio (re-)balancing and simulation"
repository = "https://github.com/bertiqwerty/balance/"
homepage = "https://github.com/bertiqwerty/balance/"
readme = "README.md"
keywords = ["finance", "investment", "portfolio", "stock", "simulation"]
categories = ["simulation", "finance"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
csv = "1.3.0"
egui = "0.28"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
eframe = { version = "0.28", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
exmex = { version = "0.20.3", features = ["serde", "value"] }
web-sys = { version = "0.3.70", features = [
    "Window",
    "Document",
    "Url",
    "Blob",
    "Location",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"
js-sys = "0.3.70"
# wasm-bindgen-test = "0.3.33"
ehttp = "0.5.0"
serde_json = "1.0.124"
egui_plot = "0.28"
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
